Purchase/Return/Delete functionality added

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>PetStoreApp</title>
+  <title>Pet Smart</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <div class="jumbotron" style="padding: 0px;">
+    <app-root></app-root>
+  </div>
 </body>
 
 </html>
